# IZG

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  merlinCompilationTest.sh
examples/: czFlagMethod.cpp  czFlagMethod.hpp  emptyMethod.hpp  modelMethod.cpp  modelMethod.hpp  phongMethod.cpp  phongMethod.hpp  skFlagMethod.cpp  skFlagMethod.hpp  texturedQuadMethod.cpp  texturedQuadMethod.hpp  triangle3DMethod.cpp  triangle3DMethod.hpp  triangleBufferMethod.cpp  triangleBufferMethod.hpp  triangleClip1Method.cpp  triangleClip1Method.hpp  triangleClip2Method.cpp  triangleClip2Method.hpp  triangleMethod.cpp  triangleMethod.hpp
framework/: application.cpp  application.hpp  arguments.hpp  bunny.cpp  bunny.hpp  framebuffer.hpp  main.cpp  method.hpp  model.cpp  model.hpp  textureData.cpp  textureData.hpp  window.cpp  window.hpp
libs/: impl.cpp
student/: documentation.dox  drawModel.cpp  drawModel.hpp  drawTrianglesExample.cpp  fwd.hpp  gpu.cpp  gpu.hpp
tests/: clearTests.cpp  clippingTests.cpp  conformanceTests.cpp  conformanceTests.hpp  drawModelTests.cpp  finalImageTest.cpp  fragmentShaderTests.cpp  groundTruth.cpp  groundTruth.hpp  performanceTest.cpp  performanceTest.hpp  phongMethodTests.cpp  renderMethodFrame.cpp  renderMethodFrame.hpp  saveFrame.cpp  saveFrame.hpp  takeScreenShot.cpp  takeScreenShot.hpp  testCommon.cpp  testCommon.hpp  tests.cpp  vertexShaderTests.cpp
tests/internalTests/: CMakeLists.txt  tests.cpp
